//! WebRTC client implementation for remote pipeline execution
//!
//! This module provides a WebRTC client that implements the `PipelineClient` trait
//! for executing pipelines on remote WebRTC servers.
//!
//! # Status
//!
//! This is a **stub implementation** as WebRTC requires complex signaling infrastructure:
//! - Signaling server for peer negotiation (offer/answer exchange)
//! - ICE candidate exchange for NAT traversal
//! - STUN/TURN servers for connectivity
//! - Data channel management
//!
//! Full implementation should reuse the WebRTC infrastructure from `remotemedia-webrtc` crate.
//!
//! # Future Implementation
//!
//! When implementing full WebRTC support:
//! 1. Add dependency on `webrtc` or `remotemedia-webrtc` crate
//! 2. Implement signaling protocol (WebSocket to signaling server)
//! 3. Create peer connection with data channels
//! 4. Implement serialization over data channels
//! 5. Handle connection lifecycle (ICE, reconnection, etc.)
//!
//! # Usage (Future)
//!
//! ```ignore
//! use remotemedia_webrtc::client::WebRtcPipelineClient;
//!
//! let client = WebRtcPipelineClient::new(
//!     "wss://signaling.example.com",
//!     Some("stun:stun.example.com:3478"),
//! ).await?;
//! let result = client.execute_unary(manifest, input).await?;
//! ```

use async_trait::async_trait;
use remotemedia_runtime_core::manifest::Manifest;
use remotemedia_runtime_core::transport::client::{ClientStreamSession, PipelineClient};
use remotemedia_runtime_core::transport::TransportData;
use std::sync::Arc;

use crate::error::{Error, Result};

/// WebRTC client for remote pipeline execution (stub)
///
/// This is a placeholder implementation. Full WebRTC support requires:
/// - Signaling server integration
/// - WebRTC peer connection management
/// - Data channel serialization
/// - ICE/STUN/TURN configuration
pub struct WebRtcPipelineClient {
    /// Signaling server URL (e.g., "wss://signaling.example.com")
    signaling_url: String,

    /// STUN/TURN server URLs (e.g., "stun:stun.example.com:3478")
    ice_servers: Vec<String>,

    /// Optional authentication token
    auth_token: Option<String>,
}

impl WebRtcPipelineClient {
    /// Create a new WebRTC client
    ///
    /// # Arguments
    ///
    /// * `signaling_url` - WebSocket URL for signaling server
    /// * `ice_servers` - Optional STUN/TURN server URLs
    /// * `auth_token` - Optional authentication token
    ///
    /// # Returns
    ///
    /// * `Ok(WebRtcPipelineClient)` - Client created successfully
    /// * `Err(Error)` - Failed to create client
    ///
    /// # Example
    ///
    /// ```ignore
    /// let client = WebRtcPipelineClient::new(
    ///     "wss://signaling.example.com",
    ///     vec!["stun:stun.example.com:3478".to_string()],
    ///     None,
    /// ).await?;
    /// ```
    pub async fn new(
        signaling_url: impl Into<String>,
        ice_servers: Vec<String>,
        auth_token: Option<String>,
    ) -> Result<Self> {
        let signaling_url = signaling_url.into();

        // Validate signaling URL format
        if signaling_url.is_empty() {
            return Err(Error::InvalidConfig(
                "WebRTC signaling_url cannot be empty".to_string(),
            ));
        }

        // Ensure signaling URL starts with ws:// or wss://
        if !signaling_url.starts_with("ws://") && !signaling_url.starts_with("wss://") {
            return Err(Error::InvalidConfig(format!(
                "WebRTC signaling_url must start with ws:// or wss://, got: {}",
                signaling_url
            )));
        }

        Ok(Self {
            signaling_url,
            ice_servers,
            auth_token,
        })
    }
}

#[async_trait]
impl PipelineClient for WebRtcPipelineClient {
    /// Execute a pipeline with unary semantics
    ///
    /// # Stub Implementation
    ///
    /// This returns an error indicating WebRTC is not yet implemented.
    ///
    /// # Full Implementation TODO
    ///
    /// 1. Connect to signaling server via WebSocket
    /// 2. Create RTCPeerConnection with ICE servers
    /// 3. Create offer and send via signaling
    /// 4. Receive answer and set remote description
    /// 5. Exchange ICE candidates
    /// 6. Open data channel for pipeline execution
    /// 7. Serialize manifest + input over data channel
    /// 8. Receive and deserialize output
    async fn execute_unary(
        &self,
        _manifest: Arc<Manifest>,
        _input: TransportData,
    ) -> remotemedia_runtime_core::Result<TransportData> {
        // TODO: Implement WebRTC execution
        //
        // Full implementation requires:
        // 1. WebRTC peer connection setup
        // 2. Signaling protocol implementation
        // 3. Data channel management
        // 4. Serialization over data channels
        //
        // Consider reusing infrastructure from remotemedia-webrtc crate
        Err(remotemedia_runtime_core::Error::Transport(
            "WebRTC execute_unary not yet implemented - requires signaling server and WebRTC infrastructure. \
            Consider using gRPC or HTTP transport instead.".to_string(),
        ))
    }

    /// Create a streaming session
    ///
    /// # Stub Implementation
    ///
    /// This returns an error indicating WebRTC streaming is not yet implemented.
    ///
    /// # Full Implementation TODO
    ///
    /// 1. Establish WebRTC peer connection (similar to execute_unary)
    /// 2. Create persistent data channel for streaming
    /// 3. Implement send/receive over data channel
    /// 4. Handle reconnection and ICE restart
    async fn create_stream_session(
        &self,
        _manifest: Arc<Manifest>,
    ) -> remotemedia_runtime_core::Result<Box<dyn ClientStreamSession>> {
        // TODO: Implement WebRTC streaming
        //
        // WebRTC is naturally streaming-oriented via data channels,
        // so streaming should be straightforward once basic connectivity works
        Err(remotemedia_runtime_core::Error::Transport(
            "WebRTC create_stream_session not yet implemented - requires signaling server and WebRTC infrastructure. \
            Consider using gRPC transport instead.".to_string(),
        ))
    }

    /// Check if the remote endpoint is healthy
    ///
    /// # Stub Implementation
    ///
    /// Returns false as WebRTC is not implemented.
    ///
    /// # Full Implementation TODO
    ///
    /// 1. Connect to signaling server
    /// 2. Send ping message
    /// 3. Wait for pong response with timeout
    /// 4. Return true if pong received within timeout
    async fn health_check(&self) -> remotemedia_runtime_core::Result<bool> {
        // TODO: Implement WebRTC health check
        //
        // Could be implemented as:
        // - WebSocket ping/pong to signaling server
        // - Or lightweight data channel ping if peer connection exists
        tracing::warn!(
            "WebRTC health check not implemented for {}",
            self.signaling_url
        );
        Ok(false)
    }
}

/// WebRTC streaming session (stub)
///
/// Represents an active WebRTC data channel connection.
pub struct WebRtcStreamSession {
    /// Unique session ID
    session_id: String,

    /// Whether the session is active
    active: bool,
}

impl WebRtcStreamSession {
    /// Create a new WebRTC stream session
    pub fn new(session_id: String) -> Self {
        Self {
            session_id,
            active: true,
        }
    }
}

#[async_trait]
impl ClientStreamSession for WebRtcStreamSession {
    fn session_id(&self) -> &str {
        &self.session_id
    }

    async fn send(&mut self, _data: TransportData) -> remotemedia_runtime_core::Result<()> {
        if !self.active {
            return Err(remotemedia_runtime_core::Error::Transport(
                "Session is closed".to_string(),
            ));
        }

        // TODO: Implement send over WebRTC data channel
        Err(remotemedia_runtime_core::Error::Transport(
            "WebRTC streaming send not yet implemented".to_string(),
        ))
    }

    async fn receive(&mut self) -> remotemedia_runtime_core::Result<Option<TransportData>> {
        if !self.active {
            return Ok(None);
        }

        // TODO: Implement receive from WebRTC data channel
        Err(remotemedia_runtime_core::Error::Transport(
            "WebRTC streaming receive not yet implemented".to_string(),
        ))
    }

    async fn close(&mut self) -> remotemedia_runtime_core::Result<()> {
        if !self.active {
            return Ok(());
        }

        self.active = false;
        tracing::info!("WebRTC stream session {} closed", self.session_id);
        Ok(())
    }

    fn is_active(&self) -> bool {
        self.active
    }
}

#[cfg(test)]
mod tests {
    use super::*;

    #[tokio::test]
    async fn test_create_client() {
        let client = WebRtcPipelineClient::new(
            "wss://signaling.example.com",
            vec!["stun:stun.example.com:3478".to_string()],
            None,
        )
        .await;
        assert!(client.is_ok());
    }

    #[tokio::test]
    async fn test_create_client_with_auth() {
        let client = WebRtcPipelineClient::new(
            "wss://signaling.example.com",
            vec![],
            Some("test-token".to_string()),
        )
        .await;
        assert!(client.is_ok());
    }

    #[tokio::test]
    async fn test_empty_signaling_url_error() {
        let client = WebRtcPipelineClient::new("", vec![], None).await;
        assert!(client.is_err());
    }

    #[tokio::test]
    async fn test_invalid_signaling_url_scheme() {
        let client = WebRtcPipelineClient::new("http://invalid.com", vec![], None).await;
        assert!(client.is_err());
    }

    #[tokio::test]
    async fn test_health_check_not_implemented() {
        let client = WebRtcPipelineClient::new("wss://signaling.example.com", vec![], None)
            .await
            .unwrap();
        let result = client.health_check().await;
        // Should return Ok(false) for stub implementation
        assert!(result.is_ok());
        assert!(!result.unwrap());
    }
}
